<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="7dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:id="@+id/details_layout"
    android:paddingTop="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="12dp">

        <hani.weather.customviews.TextViewFont
            android:id="@+id/details_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <View
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@android:color/white" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:includeFontPadding="false"
            android:id="@+id/current_details_icon" />

        <hani.weather.customviews.TextViewFont
            android:id="@+id/details_description_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <hani.weather.customviews.TextViewFont
                android:id="@+id/current_condition_temp_c_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/temperature"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />


            <hani.weather.customviews.TextViewFont
                android:id="@+id/current_condition_temp_c_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="6dp"
            android:background="#72ffffff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <hani.weather.customviews.TextViewFont
                android:id="@+id/current_condition_feels_like_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/feels_like"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />


            <hani.weather.customviews.TextViewFont
                android:id="@+id/current_condition_feels_like_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />


        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="6dp"
            android:background="#72ffffff" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <hani.weather.customviews.TextViewFont
                android:id="@+id/current_condition_wind_speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/wind_speed"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />


            <hani.weather.customviews.TextViewFont
                android:id="@+id/current_condition_wind_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="6dp"
            android:background="#72ffffff" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <hani.weather.customviews.TextViewFont
                android:id="@+id/current_condition_cloud_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/cloud"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />


            <hani.weather.customviews.TextViewFont
                android:id="@+id/current_condition_cloud_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="6dp"
            android:background="#72ffffff" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <hani.weather.customviews.TextViewFont
                android:id="@+id/current_condition_visibility_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/visibility"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />


            <hani.weather.customviews.TextViewFont
                android:id="@+id/current_condition_visibility_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="6dp"
            android:background="#72ffffff" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <hani.weather.customviews.TextViewFont
                android:id="@+id/current_condition_humidity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/humidity"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />


            <hani.weather.customviews.TextViewFont
                android:id="@+id/current_condition_humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />


        </RelativeLayout>


    </LinearLayout>
</LinearLayout>