<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="7dp"
    android:layoutDirection="ltr"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="12dp">

        <hani.weather.customviews.TextViewFont
            android:id="@+id/forecast_day_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sunday"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <View
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@android:color/white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <hani.weather.customviews.TextViewFont
                android:id="@+id/forecast_max_temperature_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingBottom="7dp"
                android:paddingLeft="10dp"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:includeFontPadding="false"
                android:shadowRadius="3"
                android:text="04:36"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_arrow_upward_24dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
            <hani.weather.customviews.TextViewFont
                android:layout_marginLeft="16dp"
                android:id="@+id/forecast_min_temperature_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingBottom="7dp"
                android:paddingLeft="10dp"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:includeFontPadding="false"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_arrow_downward_24dp"
                android:shadowRadius="3"
                android:text="04:36"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFF"
                android:textSize="20sp" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <hani.weather.customviews.TextViewFont
                android:id="@+id/day_morning_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/morning"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />


            <hani.weather.customviews.TextViewFont
                android:id="@+id/day_morning_dgree_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text="123"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/morning_image"
                android:src="@android:drawable/ic_btn_speak_now"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="6dp"
            android:background="#72ffffff" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <hani.weather.customviews.TextViewFont
                android:id="@+id/day_afternoon_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/afternoon"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />


            <hani.weather.customviews.TextViewFont
                android:id="@+id/day_afternoon_dgree_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text="123"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/afternoon_image"
                android:src="@android:drawable/ic_btn_speak_now"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="6dp"
            android:background="#72ffffff" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <hani.weather.customviews.TextViewFont
                android:id="@+id/day_evening_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/evening"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/day_evening_dgree_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text="123"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/evening_image"
                android:src="@android:drawable/ic_btn_speak_now"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="6dp"
            android:background="#72ffffff" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <hani.weather.customviews.TextViewFont
                android:id="@+id/day_night_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/night"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />


            <hani.weather.customviews.TextViewFont
                android:id="@+id/day_night_dgree_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text="123"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/night_image"
                android:src="@android:drawable/ic_btn_speak_now"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>


        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:layout_marginTop="6dp"
            android:background="@android:color/white" />

    </LinearLayout>
</LinearLayout>